--- a/custom.css
+++ b/custom.css
@@ -1,48 +1,99 @@
-#contextMenuContainer {display: none; position: fixed; z-index: 100;}
-#contextMenuContainer #contextMenu {list-style: none; }
-h1{
-	text-align: center;
+.persons{
+    width: 14.5%;
+    height: 100%;
+    position: fixed;
+    outline: 1px solid;
+    background: #ffffff;
+    padding: 5px;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
 }
-body { font-family: Helvetica, Arial, sans-serif; }
-
-.dropzone-wrapper {
-    position: absolute;
-    bottom: 0;
+.o-layer{
+  opacity: 0.4;
+    filter: alpha(opacity=40);
+    width: 100vw;
+    height: 100vh;
+    background: #000000;
+     position: absolute;
+    top: 0;
     left: 0;
-    right: 0;
+    z-index: -100;
 }
-
-.dropzone {
-    overflow: hidden;
-    margin: .5em;
-    padding: 1em;
-    color: #666;
-    text-align: center;
-    background: #ccc;
-    line-height: 4em;
-    border: 4px dashed transparent;
-    transition: background .15s linear, border-color .15s linear;
+.title-p{
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: no-wrap;
+    flex-direction: row;
+    height:24px;
+    width:100%;
 }
-
-.dropzone.-drop-possible { border-color: #666; }
-
-.dropzone.-drop-over {
-    background: #666;
-    color: #fff;
+.btn-edits{
+    background: url('../img/edit.png') no-repeat;
+    background-size: contain;
+    height:24px;
+    width:24px;
 }
-
-.draggable {
-    position: relative;
-    z-index: 10;
-    width: 200px;
-    margin: .25em;
-    padding: 1em 2em;
-    background-color: #29e;
-    color: #fff;
-    text-align: center;
-
-    -ms-touch-action: none;
-        touch-action: none;
+.btn-editsp{
+    background: url('../img/edit.png') no-repeat;
+    background-size: contain;
+    height:18px;
+    width:18px;
 }
-
-.draggable.-drop-possible { background-color: #42bd41; }
+.workarea{
+  margin-left: 15%;
+  height: 90%;
+}
+.proyects{
+  display: flex;
+  flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
+}
+.personer{
+  background: #6699ff;
+  border-radius: 15px;
+  padding: 5px;
+  height: 18px;
+    margin: 3px;
+}
+.shower{
+  width: 100%;
+  min-height: 55px;
+    height: auto;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.proyecct{
+    min-height: 55px;
+    height: auto;
+  position: relative;
+  background:rgba(255, 255, 255, .5); 
+    width: 150px;
+  display:flex;
+  align-items: center; 
+  flex-direction: column;
+  margin: 5px;
+}
+h3{
+  margin:0px;
+}
+header{
+  height: 55px;
+  width: 100%;
+  background: linear-gradient(#333333, #333333,#404040,#404040,#4d4d4d,#404040,#333333,#333333);
+  color: #ffffff;
+  opacity: 1;
+    filter: alpha(opacity=100);
+    display: flex;
+    align-items: center;
+}
+body{
+  background-image: url('../img/desk.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+   
+    width: 100vw;
+    height: 100vh;
+    margin: 0px;
+}
