--- a/custom.css
+++ b/custom.css
@@ -1,12 +1,11 @@
 .persons{
-    width: 14.5%;
-    height: 100%;
+    width: 100%;
+    height: 19%;
     position: fixed;
     outline: 1px solid;
-    background: #ffffff;
+    background: #777;
     padding: 5px;
-    opacity: 0.7;
-    filter: alpha(opacity=70);
+    opacity: 1.7
 }
 .o-layer{
   opacity: 0.4;
@@ -28,13 +27,13 @@
     width:100%;
 }
 .btn-edits{
-    background: url('../img/edit.png') no-repeat;
+    background: url('img/edit.png') no-repeat;
     background-size: contain;
     height:24px;
     width:24px;
 }
 .btn-editsp{
-    background: url('../img/edit.png') no-repeat;
+    background: url('img/edit.png') no-repeat;
     background-size: contain;
     height:18px;
     width:18px;
@@ -50,11 +49,10 @@
     width: 100%;
 }
 .personer{
-  background: #6699ff;
-  border-radius: 15px;
+  background: white;
   padding: 5px;
   height: 18px;
-    margin: 3px;
+  margin: 3px;
 }
 .shower{
   width: 100%;
@@ -79,17 +77,19 @@ h3{
   margin:0px;
 }
 header{
-  height: 55px;
-  width: 100%;
-  background: linear-gradient(#333333, #333333,#404040,#404040,#4d4d4d,#404040,#333333,#333333);
-  color: #ffffff;
-  opacity: 1;
+    height: 55px;
+    width: 100%;
+    background: #777;
+    color: #ffffff;
+    opacity: 1;
     filter: alpha(opacity=100);
     display: flex;
     align-items: center;
+    margin: 0%;
+    padding: 4%;
 }
 body{
-  background-image: url('../img/desk.jpg');
+  background-image: url('img/code.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
    
@@ -97,3 +97,4 @@ body{
     height: 100vh;
     margin: 0px;
 }
+
