--- a/modalstyle.css
+++ b/modalstyle.css
@@ -4,26 +4,26 @@
 
 }
 .ui-dialog-titlebar{
-	background: #666666;
-	color: #ffffff;
-	display: flex;
-	justify-content: space-between;
+	  background: #2d5f8a;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 
 .ui-button {
-  background: #77a4c2;
-  background-image: -webkit-linear-gradient(top, #77a4c2, #346c8f);
-  background-image: -moz-linear-gradient(top, #77a4c2, #346c8f);
-  background-image: -ms-linear-gradient(top, #77a4c2, #346c8f);
-  background-image: -o-linear-gradient(top, #77a4c2, #346c8f);
-  background-image: linear-gradient(to bottom, #77a4c2, #346c8f);
-  -webkit-border-radius: 5;
-  -moz-border-radius: 5;
-  border-radius: 5px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 11px;
-  text-decoration: none;
+    background: #777;
+    background-image: -webkit-linear-gradient(top, #777, #777);
+    background-image: -moz-linear-gradient(top, #77a4c2, #346c8f);
+    background-image: -ms-linear-gradient(top, #77a4c2, #346c8f);
+    background-image: -o-linear-gradient(top, #77a4c2, #346c8f);
+    background-image: linear-gradient(to bottom, #777, #ccc);
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 10px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 18px;
+    text-decoration: blink;
 }
 
 .ui-button:hover {
